fix: Default colour scheme was not working so added back light and dark mode but added light to default params

--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ body {
   margin: 0;
   font-size: 0.85em;
   font-weight: 300;
+  background-color: #fafafa;
+  color: #292929
 }
 
 @media (prefers-color-scheme: dark) {
@@ -52,9 +54,11 @@ body {
   }
 }
 
-body {
-  background-color: #fafafa;
-  color: #292929
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: #fafafa;
+    color: #292929
+  }
 }
 
 #ribbon-wrapper {
@@ -68,6 +72,7 @@ body {
 #ribbon {
   position: absolute;
   z-index: -1;
+  background-color: #2CDF89;
 }
 
 @media(min-width: 801px) {
@@ -84,8 +89,10 @@ body {
   }
 }
 
-#ribbon {
-  background-color: #2CDF89;
+@media (prefers-color-scheme: light) {
+  #ribbon {
+    background-color: #2CDF89;
+  }
 }
 
 @media(max-width: 800px) {
@@ -96,12 +103,14 @@ body {
   }
 }
 
+@media (prefers-color-scheme: light) {
 
-h1,
-h2,
-h3,
-h5 {
-  color: #3A3A3A;
+  h1,
+  h2,
+  h3,
+  h5 {
+    color: #3A3A3A;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -119,6 +128,7 @@ h2,
 h3,
 h5 {
   font-family: 'Josefin Slab', serif;
+  color: #3A3A3A;
 }
 
 h1 {
@@ -133,6 +143,8 @@ h1 a {
 @media(min-width:801px) {
   h1 a:hover {
     text-decoration: none;
+    background-color: #DF442C;
+    color: white;
   }
 }
 
@@ -145,10 +157,12 @@ h1 a {
   }
 }
 
-@media(min-width:801px) {
-  h1 a:hover {
-    background-color: #DF442C;
-    color: white;
+@media (prefers-color-scheme: light) {
+  @media(min-width:801px) {
+    h1 a:hover {
+      background-color: #DF442C;
+      color: white;
+    }
   }
 }
 
@@ -222,6 +236,12 @@ svg {
   fill: #3A3A3A
 }
 
+@media (prefers-color-scheme: light) {
+  svg {
+    fill: #3A3A3A
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   svg {
     fill: #FFFFCC
@@ -230,6 +250,8 @@ svg {
 
 svg:hover {
   cursor: pointer;
+  background-color: #DF442C;
+  fill: #FFFFCC;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -239,9 +261,11 @@ svg:hover {
   }
 }
 
-svg:hover {
-  background-color: #DF442C;
-  fill: #FFFFCC;
+@media (prefers-color-scheme: light) {
+  svg:hover {
+    background-color: #DF442C;
+    fill: #FFFFCC;
+  }
 }
 
 #contact-email {
@@ -265,9 +289,17 @@ a {
   color: #3A3A3A
 }
 
+@media (prefers-color-scheme: light) {
+  a {
+    text-decoration: none;
+    color: #3A3A3A
+  }
+}
+
 @media(min-width:801px) {
   a:hover {
     text-decoration: underline;
+    color: #DF442C;
   }
 }
 
@@ -279,15 +311,18 @@ a {
   }
 }
 
-@media(min-width:801px) {
-  a:hover {
-    color: #DF442C;
+@media (prefers-color-scheme: light) {
+  @media(min-width:801px) {
+    a:hover {
+      color: #DF442C;
+    }
   }
 }
 
 code {
   text-justify: none;
   word-break: break-all;
+  color: #DF442C;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -296,8 +331,10 @@ code {
   }
 }
 
-code {
-  color: #DF442C;
+@media (prefers-color-scheme: light) {
+  code {
+    color: #DF442C;
+  }
 }
 
 #article-footer {
